# swagger_output.json
@@ -76,6 +76,22 @@
         }
       }
     },
+    "/api/usuarios/socios/activos": {
+      "get": {
+        "tags": [
+          "Usuarios"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/usuarios/register": {
       "post": {
         "tags": [
@@ -178,7 +194,7 @@
         "tags": [
           "Usuarios"
         ],
-        "description": "",
+        "description": "Registrar usuario del sistema (admin / recepcionista)",
         "parameters": [
           {
             "name": "body",
@@ -211,6 +227,45 @@
           },
           "400": {
             "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/usuarios/{id}": {
+      "put": {
+        "tags": [
+          "Usuarios"
+        ],
+        "description": "Actualizar estado del usuario a activo o inactivo, buscandolo por su ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "activo": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
